# fast_api_learning

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
app/: main.py  utils.py  validators.py
app/models/: models.py  user_models.py
